--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -404,7 +404,8 @@
     <string name="notification_hint">Bildirim içeriği</string>
     <string name="wifi_ssid">Ağ Adı</string>
     <string name="speech_hint">Metin Konuşma</string>
-    <string name="speech_description">%t: zaman için.\n%w: haftanın günü için.\n%d: tarih için.\nBoş tetikleyiciler konuşmayı durdurur.\nNot: Belki yerel dilde bir motor yüklemelisiniz(örneğin, Google metin konuşma motoru)</string>
+    <string name="speech_description">%t: zaman için.\n%w: haftanın günü için.\n%d: tarih için.\n%b: pil seviyesi.\nBoş tetikleyiciler konuşmayı durdurur.\nNot: Belki yerel dilde bir motor yüklemelisiniz(örneğin, Google metin konuşma motoru)</string>
+    <string name="toast_description">%t: zaman için.\n%w: haftanın günü için.\n%d: tarih için.\n%b: pil seviyesi.</string>
     <string name="command_hint">Yalnızca geliştiriciler için kabuk komutu</string>
     <string name="command_on_system_process">Sistem işleminde çalışır</string>
     <string name="su_not_supported_on_system">"su" sistem işleminde çalışmayı desteklemiyor.</string>
@@ -518,6 +519,7 @@
     <string name="clip_history_size">Clipboard history size</string>
     <string name="redo">Redo</string>
     <string name="undo">Undo</string>
+    <string name="action_toast">Toast</string>
 
 
 </resources>
